--- a/share/i18n/esdb/APPLE/Makefile
+++ b/share/i18n/esdb/APPLE/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD$
+# $MidnightBSD$
+# $FreeBSD: stable/10/share/i18n/esdb/APPLE/Makefile 219019 2011-02-25 00:04:39Z gabor $
 # $NetBSD: Makefile.inc,v 1.2 2008/10/25 22:27:35 apb Exp $
 
 CODE=	MAC
