--- a/etc/inetd.conf
+++ b/etc/inetd.conf
@@ -58,15 +58,17 @@
 # --allow-root path correctly or you open a trivial to exploit but
 # deadly security hole.
 #
-#cvspserver	stream	tcp	nowait	root	/usr/bin/cvs	cvs --allow-root=/your/cvsroot/here pserver
-#cvspserver	stream	tcp	nowait	root	/usr/bin/cvs	cvs --allow-root=/your/cvsroot/here kserver
+#cvspserver	stream	tcp	nowait	root	/usr/local/bin/cvs	cvs --allow-root=/your/cvsroot/here pserver
+#cvspserver	stream	tcp	nowait	root	/usr/local/bin/cvs	cvs --allow-root=/your/cvsroot/here kserver
 #
 # RPC based services (you MUST have rpcbind running to use these)
 #
 #rstatd/1-3	dgram rpc/udp wait root	/usr/libexec/rpc.rstatd	 rpc.rstatd
 #rusersd/1-2	dgram rpc/udp wait root	/usr/libexec/rpc.rusersd rpc.rusersd
 #walld/1	dgram rpc/udp wait root	/usr/libexec/rpc.rwalld	 rpc.rwalld
+#pcnfsd/1-2	dgram rpc/udp wait root	/usr/local/libexec/rpc.pcnfsd	 rpc.pcnfsd
 #rquotad/1	dgram rpc/udp wait root	/usr/libexec/rpc.rquotad rpc.rquotad
+#rquotad/1	dgram rpc/udp6 wait root	/usr/libexec/rpc.rquotad rpc.rquotad
 #sprayd/1	dgram rpc/udp wait root	/usr/libexec/rpc.sprayd	 rpc.sprayd
 #
 # example entry for the optional pop3 server
