--- a/.gitattributes
+++ b/.gitattributes
@@ -48185,6 +48185,7 @@ etc/dhcp6c.conf -text
 etc/disktab -text
 etc/doas.conf svneol=native#text/plain
 etc/etc.amd64/ttys -text
+etc/etc.arm/ttys -text
 etc/etc.i386/ttys -text
 etc/etc.ia64/ttys -text
 etc/etc.mips/ttys -text
