--- a/lib/libc/stdio/Makefile.inc
+++ b/lib/libc/stdio/Makefile.inc
@@ -1,5 +1,5 @@
 #	@(#)Makefile.inc	8.3 (Berkeley) 4/17/94
-# $FreeBSD: stable/11/lib/libc/stdio/Makefile.inc 357852 2020-02-13 03:13:29Z kevans $
+# $FreeBSD$
 
 # stdio sources
 .PATH: ${LIBC_SRCTOP}/stdio
